# mini-unix-shell-42

./: .gitignore  CMakeLists.txt  Makefile  README.md  minishell.supp  tasks.todo
include/: builtins.h  error_handling.h  executor.h  expander.h  heredoc.h  lexer.h  minishell.h  parser.h  shell_init.h  signal_handling.h  token.h  utils.h  widget.h
libft/: Makefile  ft_copy_envp.c  ft_free_2d.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_strncmp.c  libft.h
libft/ft_printf/: hex_set.c
src/: error_handling.c  lst_append.c  main.c  shell_init.c
src/builtins/: builtins.c  builtins_utils.c  cd.c  echo.c  env.c  environment.c  exec_single_builtin.c  exit.c  export.c  export_print.c  pwd.c  unset.c
src/executor/: add_cmd_path.c  execute_block.c  execute_cmds.c  executor.c  extract_ast_data.c  extract_cmds_ast.c  get_exitcode.c  getcmd.c  getfd.c  handle_pipes.c  handle_redirects.c  heredoc.c
src/expander/: count_dollar_sign.c  env_var_utils.c  error.c  expand_input.c  expand_utils.c  expander.c  remove_quotes.c  search_exp_utils.c  utils.c
src/heredoc/: file_handling.c  heredoc.c  read_write_to_tmp.c
src/lexer/: assign_type.c  check_syntax_error.c  count_tokens.c  create_tokenlist.c  get_type.c  lexer.c  split_command_line.c
src/parser/: cmd.c  node_functions.c  parser.c  redirect.c  tree.c  utility_functions.c
src/signal_handling/: signal_handling.c
src/utils/: cpy_2d.c  envv_search.c  free_array.c  ft_free_2d_array.c  ft_get_index_2d.c  ft_get_index_key.c  ft_lst_insert_back.c  ft_lstfree.c  ft_strdup.c  ft_strlcpy.c  ft_strlen.c  ft_strnstr.c  ft_substr.c  ft_xfunc.c  ft_xmalloc.c  lst_add_bk.c  lst_add_ft.c  lst_clear.c  lst_new.c  sort_2d_alpha.c  xmalloc.c
test/: CMakeLists.txt  widget.cpp
tests/: CMakeLists.txt  cmd.cpp  get_type.cpp  lex_pars_exp_integration.cpp  lexer_parser_integration.cpp  main.cpp  parser.cpp  redirect.cpp  split_command_line.cpp  tree.cpp
tests/builtins_tests/: builtins.cpp  builtins_utils.cpp  cd.cpp  echo.cpp  environment.cpp  unset.cpp
tests/executor_tests/: extract_ast_data.cpp  getcmd.cpp  getfd.cpp
tests/expander_tests/: env_var_utils.cpp  expand_utils.cpp  expander.cpp  remove_quotes.cpp
tests/lexer_tests/: ft_lexer.cpp
tests/parser_tests/: cmd.cpp  node_functions.cpp  parser.cpp  redirect.cpp  utility_functions.cpp
tests/utils_tests/: ft_get_index_key.cpp  lst_append.cpp
